# 42sh

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Makefile
lib/my/: .gitignore  CMakeLists.txt  Makefile  definitions.mk  settings.mk
lib/my/cmake/: Makefile  config.cmake  macros.cmake
lib/my/cmake/modules/: FindLibMy.cmake
lib/my/config/: Makefile  get_endian.c  get_property.c  libmy_config.h  main.c
lib/my/doc/: CMakeLists.txt  Doxyfile  Doxyfile.in
lib/my/include/: my.h
lib/my/include/libmy/: ascii.h  collections.h  config.h.in  core.h  hash.h  io.h  math.h  memory.h  misc.h  my.h  parsing.h  printf.h
lib/my/modules/: ascii.mk  collections.mk  core.mk  io.mk  math.mk  memory.mk  misc.mk  parsing.mk  printf.mk
lib/my/src/: CMakeLists.txt  Makefile
lib/my/src/ascii/: CMakeLists.txt  my_free_str_array.c  my_revstr.c  my_str_csplit_iter.c  my_str_isalpha.c  my_str_islower.c  my_str_isnum.c  my_str_isprintable.c  my_str_isupper.c  my_str_to_word_array.c  my_strcapitalize.c  my_strcat.c  my_strchr.c  my_strcmp.c  my_strcpy.c  my_strdup.c  my_strechr.c  my_stricmp.c  my_strincmp.c  my_strlen.c  my_strlowcase.c  my_strncat.c  my_strncmp.c  my_strncpy.c  my_strndup.c  my_strstr.c  my_strstr_n.c  my_strupcase.c
lib/my/src/collections/: CMakeLists.txt  my_vec_copy.c  my_vec_ensure_capacity.c  my_vec_extend_to_length.c  my_vec_free.c  my_vec_init_capacity.c  my_vec_pop.c  my_vec_push.c  my_vec_reserve.c  my_vec_set_capacity.c  my_vec_shrink_to_fit.c
lib/my/src/hash/: CMakeLists.txt  hash.h  my_hash_load_from_mem.c  my_hasher_finish.c  my_hasher_init.c  my_hasher_write.c  my_hasher_write_fixed_int.c  my_hasher_write_int.c  my_siphash13_rounds.c
lib/my/src/io/: CMakeLists.txt  my_fclose.c  my_fclose_allow_close.c  my_feof.c  my_fflush.c  my_ffree.c  my_fget_buffer.c  my_finit.c  my_flush_iostream.c  my_flush_stdio.c  my_fopen.c  my_fopen.h  my_fputc.c  my_fputint.c  my_fputintmax_t_base.c  my_fputs.c  my_fputs_endl.c  my_fputuint.c  my_fputuintmax_t_base.c  my_fread.c  my_fread_to_string.c  my_fread_to_string_allow_read.c  my_free_iostream.c  my_frputc.c  my_fset_buffer.c  my_fset_threshold.c  my_fwrite.c  my_get_iostream.c  my_get_stdio.c  my_getdelim.c  my_init_iostream.c  my_is_iostream.c  my_put_nbr.c  my_putchar.c  my_putstr.c  my_putuint.c  my_show_word_array.c  my_showmem.c  my_showstr.c
lib/my/src/math/: my_compute_power.c  my_compute_square_root.c  my_find_prime_sup.c  my_is_prime.c  my_isneg.c
lib/my/src/memory/: CMakeLists.txt  my_binary_search.c  my_calloc.c  my_cbuffer_get_parts.c  my_cbuffer_init.c  my_cbuffer_pop.c  my_cbuffer_push.c  my_cbuffer_read.c  my_cbuffer_rotate.c  my_cbuffer_write.c  my_memchr.c  my_memcmp.c  my_memcpy.c  my_memdup.c  my_memmove.c  my_memrev.c  my_memset.c  my_memswap.c  my_msort.c  my_realloc.c  my_sfree.c  my_swap_ptr.c
lib/my/src/misc/: my_ptr_array_len.c  my_sort_int_array.c  my_swap.c
lib/my/src/parsing/: CMakeLists.txt  my_getnbr.c  my_getnbr_base.c  my_next_size_t.c  my_next_uint.c
lib/my/src/printf/: CMakeLists.txt  my_asprintf.c  my_dprintf.c  my_fprintf.c  my_printf.c  my_printf.h  my_printf_boolean.c  my_printf_boolean_len.c  my_printf_char.c  my_printf_conversion.c  my_printf_conversion_len.c  my_printf_count_parameters.c  my_printf_fill_args.c  my_printf_fill_types.c  my_printf_get_conv_base.c  my_printf_get_conv_specifier.c  my_printf_get_flags.c  my_printf_get_len_modifier.c  my_printf_get_position.c  my_printf_get_type.c  my_printf_next_conversion.c  (+19 more)
lib/my/tests/: CMakeLists.txt
src/: CMakeLists.txt  args.c  builtin.c  context.c  create_file_path.c  cwd.c  env.c  error.c  exec.c  exec_parse.c  exec_tokens.c  execute.c  execute_2.c  external_pipe.c  find_executable.c  lint.c  lint_tokens.c  main.c  open_script.c  parse_args.c  parsing.c  print.c  print_prompt.c  print_prompts.c  print_util.c  print_utils.c  prompt.c  prompt_util.c  prompt_utils.c  read_line.c  reset_path.c  start.c  status.c  util.c  vars.c
src/builtin/: CMakeLists.txt  alias.c  bindkey.c  builtins.c  cd.c  dirs.c  env.c  exit.c  get_builtin.c  repeat.c  set.c  setenv.c  source.c  unalias.c  unset.c  unsetenv.c
src/command/: CMakeLists.txt  command_drop.c  command_execute.c  command_execute_builtin.c  command_execute_external.c  command_expand_aliases.c  command_expand_redirect.c  command_expand_vars.c  command_globbing.c  command_init.c  command_need_globbing.c  command_open_redirects.c  command_parse.c  command_resolve.c  external_pipe.c
src/input/: CMakeLists.txt  token_consume.c  token_stream_drop.c  token_stream_init.c  token_stream_parse.c  token_stream_push.c  token_string.c  token_to_str.c
src/line_edit/: CMakeLists.txt  line_edit_fill.c  line_edit_reset.c
src/line_edit/completion/: CMakeLists.txt  apply_completion.c  fill_completion_list.c  get_completion_list.c  print_completion_list.c
src/line_edit/keybinds/: CMakeLists.txt  keybind_backward_word.c  keybind_capitalize_word.c  keybind_clear_screen.c  keybind_completion.c  keybind_delete.c  keybind_delete_word.c  keybind_downcase_word.c  keybind_empty.c  keybind_eof.c  keybind_escape.c  keybind_forward_word.c  keybind_line_end.c  keybind_line_kill.c  keybind_line_start.c  keybind_move_cursor.c  keybind_send_cmd.c  keybind_show.c  keybind_upcase_word.c  keybinds.c  keybinds_map.c
src/token/: CMakeLists.txt  token_consume.c  token_find.c  token_stream_drop.c  token_stream_init.c  token_stream_parse.c  token_stream_push.c  token_string.c  token_string_2.c  token_to_str.c
src/util/: CMakeLists.txt  column_print.c  create_file_path.c  free_entry.c  lstr.c  parsing.c  sclose.c  split_at.c  words.c
src/variables/: CMakeLists.txt  check_var_name.c  expand_var.c  expand_vars.c  print_var_error.c
tests/: CMakeLists.txt  test_args.c  test_context.c  test_create_file_path.c  test_env.c  test_error.c  test_parsing.c  test_read_line.c  test_reset_path.c  test_util.c  test_vars.c
tests/integration/: CMakeLists.txt  test_basic.toml  test_builtins.toml  test_errors.toml  test_globbing.toml  test_inhibitors.toml  test_var_expansion.toml  tester.sh
(+280 files in other folders)
